Display all data for an endpoint done

--- a/templates/show_all_endpoints.html
+++ b/templates/show_all_endpoints.html
@@ -32,7 +32,7 @@
                         <td>{{ data.expires_at }}</td>
                         <td>{{ data.status }}</td>
                         <td>
-                            <a class="btn btn-light">
+                            <a class="btn btn-light" href="/endpoint-details/{{data.endpoint}}">
                                 View
                             </a>
                         </td>
