--- a/templates/show_endpoint_data.html
+++ b/templates/show_endpoint_data.html
@@ -17,7 +17,7 @@
     {% if call_from == 'save_data' %}
         <div class="container" style="margin-top: 15pt;">
             <p style="font-size: 80%;">
-                <input style="width:100%;" type="text" value="127.0.0.1:5000/test-webhook/{{ data_posted.reference_endpoint }}" id="myEndpoint" readonly>
+                <input style="width:100%;" type="text" value="http://shubh24aug.pythonanywhere.com/test-webhook/{{ data_posted.reference_endpoint }}" id="myEndpoint" readonly>
                 <br>
                 <button class="btn btn-sm btn-outline-primary" onclick="myFunction()" style="position: inline;">Copy</button>
             </p>
@@ -98,7 +98,7 @@
     {% else %}
         <div class="container" style="margin-top: 15pt;">
             <p style="font-size: 80%;">
-                <input style="width:100%;" type="text" value="127.0.0.1:5000/test-webhook/{{ reference_endpoint }}" id="myEndpoint" readonly>
+                <input style="width:100%;" type="text" value="1http://shubh24aug.pythonanywhere.com/test-webhook/{{ reference_endpoint }}" id="myEndpoint" readonly>
                 <br>
                 <button class="btn btn-sm btn-outline-primary" onclick="myFunction()" style="position: inline;">Copy</button>
             </p>
