Updated No-Data message

--- a/templates/show_endpoint_data.html
+++ b/templates/show_endpoint_data.html
@@ -184,7 +184,7 @@
         {% else %}
             <div class="card" style="margin-top: 20pt;">
                 <div style="text-align: center;">
-                    No Endpoints exists in the Database. Go ahead and create one from the button on the Top.
+                    No Endpoint data exists in the Database. Copy the endpoint and dump some data.
                 </div>
             </div>
         {% endif %}
